--- a/lab04/my404.html
+++ b/lab04/my404.html
@@ -1,1 +1,16 @@
-This is a custom 404 message
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+      body {
+        color: red;
+      }
+      h1 {
+        color: blue;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>This is a custom 404 message</h1>
+  </body>
+</html>
